# BinanceSquareBot

./: .env_simple  .gitignore  README.md  pyproject.toml
.github/workflows/: run-bot.yml
data/: app.db  processed_urls.db
docs/: polyapi.md
docs/superpowers/plans/: 2026-04-19-polymarket-investment-research.md
docs/superpowers/specs/: 2026-04-19-polymarket-investment-research-design.md
src/binance_square_bot/: cli.py  config.py
src/binance_square_bot/models/: __init__.py  article.py  base.py  daily_publish_stats.py  polymarket_market.py  tweet.py
src/binance_square_bot/services/: __init__.py  base.py  binance_publisher.py  concurrent_executor.py  generator.py  polymarket_fetcher.py  polymarket_filter.py  publisher.py  research_generator.py  spider.py  storage.py
src/binance_square_bot/services/cli/: __init__.py  fn_cli.py  followin_cli.py  parallel_cli.py  polymarket_cli.py
src/binance_square_bot/services/source/: __init__.py  polymarket_source.py
tests/: test_binance_publisher.py  test_cli.py  test_polymarket_fetcher.py  test_polymarket_filter.py  test_polymarket_market.py
tests/models/: test_base.py
tests/services/: test_service_base.py  test_storage.py
tests/services/cli/: test_polymarket_cli.py
tests/services/source/: test_polymarket_source.py
