[project]
name = "binance-square-bot"
version = "1.0.0"
description = "自动爬取Fn新闻，通过LLM生成币安广场推文并定时发布"
authors = [
  { name = "BinanceSquareBot Contributors" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "langchain>=0.2.0",
  "langchain-openai>=0.1.0",
  "langgraph>=0.1.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "typer>=0.9.0",
  "rich>=13.0.0",
  "curl-cffi>=0.6.0",
  "httpx>=0.25.0",
]

[project.scripts]
binance-square-bot = "binance_square_bot.cli:app"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C",   # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
follow_imports = "normal"
follow_imports_for_stubs = false
ignore_missing_imports = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
pythonpath = [
  "src",
]
addopts = "-v"
